Clarified whitespace proscription following sigils.
git-svn-id: http://svn.pugscode.org/pugs@23134 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -176,6 +176,11 @@ The C<$pkg'var> syntax is dead.  Use C<$pkg::var> instead.
 
 =item *
 
+You may no longer put whitespace between a sigil and its following
+name or construct.
+
+=item *
+
 You may interpolate a string into a package or variable name using
 C<::{$expr}> where you'd ordinarily put a package or variable name.
 The string is allowed to contain additional instances of C<::>, which
