--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -11,11 +11,11 @@ Allison Randal <al@shadowed.net>
 
 =head1 VERSION
 
-  Maintainer: Allison Randal <al@shadowed.net>
+  Maintainer: Larry Wall <larry@wall.org>
   Date: 21 Mar 2003
-  Last Modified: 20 Sep 2004
+  Last Modified: 05 Nov 2004
   Number: 6
-  Version: 3
+  Version: 4
 
 
 This document summarizes Apocalypse 6, which covers subroutines and the
@@ -173,22 +173,33 @@ C<FETCH> and C<STORE> methods:
 
 =head2 Operator overloading
 
-Operators are just subroutines with special names.  
+Operators are just subroutines with special names.  An operator name
+consists of a grammatical category name followed by a single colon
+followed by an operator name specified as if it were a hash subscript
+(but evaluated at compile time).  So any of these indicate the same
+binary addition operator:
+
+    infix:«+»
+    infix:<<+>>
+    infix:{'+'}
+    infix:{"+"}
+
+Use the C<&> sigil just as you would on ordinary subs.
 
 Unary operators are defined as prefix or postfix:
 
-    sub prefix:OPNAME  ($operand) {...}
-    sub postfix:OPNAME ($operand) {...}
+    sub prefix:«OPNAME»  ($operand) {...}
+    sub postfix:«OPNAME» ($operand) {...}
 
 Binary operators are defined as infix:
 
-    sub infix:OPNAME ($leftop, $rightop) {...}
+    sub infix:«OPNAME» ($leftop, $rightop) {...}
 
 Bracketing operators are defined as circumfix. The leading and trailing
 delimiters together are the name of the operator.
 
-    sub circumfix:LEFTDELIM...RIGHTDELIM ($contents) {...}
-    sub circumfix:DELIMITERS ($contents) {...}
+    sub circumfix:«LEFTDELIM...RIGHTDELIM» ($contents) {...}
+    sub circumfix:«DELIMITERS» ($contents) {...}
 
 If the left and right delimiters aren't separated by "C<...>",
 the C<DELIMITERS> string must be an even number of characters. The first
@@ -197,10 +208,10 @@ the closing.
 
 Operator names can be any sequence of Unicode characters. For example:
 
-    sub infix:\(c\) ($text, $owner) { return $text but Copyright($owner) }
-    method prefix:± (Num $x) returns Num { return +$x | -$x }
-    multi sub postfix:! (Int $n) { $n < 2 ?? 1 :: $n*($n-1)! }
-    macro circumfix:\<!--...--\> ($text) is parsed / .*? / { "" }
+    sub infix:«(c)» ($text, $owner) { return $text but Copyright($owner) }
+    method prefix:«±» (Num $x) returns Num { return +$x | -$x }
+    multi sub postfix:«!» (Int $n) { $n < 2 ?? 1 :: $n*($n-1)! }
+    macro circumfix:«<!--...-->» ($text) is parsed / .*? / { "" }
 
     my $document = $text (c) $me;
 
@@ -208,8 +219,6 @@ Operator names can be any sequence of Unicode characters. For example:
 
     <!-- This is now a comment -->
 
-Parentheses, square brackets, curlies, angle brackets, semicolons,
-commas, and backslashes may be part of the name only if backslashed.
 Whitespace may never be part of the name.  A null operator name does
 not define a null or whitespace operator, but a default matching rule
 for that syntactic category.
