--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 5 Nov 2004
+  Last Modified: 6 Nov 2004
   Number: 11
-  Version: 1
+  Version: 2
 
 =head1 Overview
 
@@ -35,6 +35,8 @@ two basic declaration syntaxes:
 
     module Bar {...}	# block is in module Bar
 
+The first form is allowed only as the first declaration in the file.
+
 Since there are no barewords in Perl 6, module names must be predeclared,
 or use the sigil-like C<::ModuleName> syntax.  The C<::> prefix does not
 imply top-levelness as it does in Perl 5.  (Use C<::*> for that.)
@@ -48,7 +50,8 @@ does not imply globalness (unlike in Perl 5).
 
 The C<::*> namespace is not "main".  The default namespace for the main
 program is C<::*Main>.  (Putting C<module Main;> at the top of your program
-is redundant, except insofar as it makes C<use strict> the default.)
+is redundant, except insofar as it tells Perl that the code is Perl 6 code
+and not Perl 5 code.)
 
 Module traits set using C<is>:
 
@@ -85,8 +88,8 @@ are required to declare their full name so that installations can know
 where to keep them, such that multiple versions by different authors
 can coexist, all of them available to any installed version of Perl.
 
-The syntax of a versioned module or class declaration has three hyphen
-separated parts:
+The syntax of a versioned module or class declaration has three parts
+separated by hyphens:
 
     class Dog-1.2.1-cpan:JRANDOM;
     class Dog-1.2.1-http://www.some.com/~jrandom;
@@ -98,7 +101,7 @@ lexical scope, C<Dog> refers to the longer name.
 
 If there are extra classes or modules or packages declared within
 the same file, they implicitly have a long name including the file's
-version and author, but you needn't declare them.
+version and author, but you needn't declare them again.
 
 Since these long names are the actual names of the classes, when you say:
 
@@ -116,9 +119,9 @@ you're really asking for:
 
     use Dog-1.2.1-(Any);
 
-Saying C<1.2.1> specifies an I<exact> match on the version
-number, not a minimum match.
-To match more than one version, put a range operator in parens:
+Saying C<1.2.1> specifies an I<exact> match on the version number,
+not a minimum match.  To match more than one version, put a range
+operator in parens:
 
     use Dog-(1.2.1..1.2.3);
     use Dog-(1.2.1..^1.3);
@@ -136,16 +139,20 @@ you're asking for any version of Perl 6.  Say:
     use Perl-6.2.7.1;
 
 if you want to lock in a particular set of semantics at some greater
-degree of specificity.  And someone ever forks Perl, you can say
+degree of specificity.  And some large company ever forks Perl, you can say
 
     use Perl-6-cpan:TPF
 
-to guarantee you get the standard one.  C<:-)>
+to guarantee that you get the unembraced Perl.  C<:-)>
 
-Any valid smartmatch selector works:
+For wildcards any valid smartmatch selector works:
 
     use Dog-(1.2.1 | 1.3.4)-(/:i jrandom/);
     use Dog-(Any)-(/^cpan\:/)
+
+Parens are optional on a closure smartmatcher.  The preceding may
+also be written:
+
     use Dog-{$^ver ~~ 1.2.1 | 1.3.4}-{$^auth ~~ /:i jrandom/};
     use Dog-{$^ver ~~ Any}-{$^auth ~~ /^cpan\:/}
 
@@ -158,3 +165,57 @@ scope.  So you can just say
 and it knows (even if you don't) that you mean
 
     my Dog-1.3.4-cpan:JRANDOM $spot .= new("woof");
+
+=head1 Forcing Perl 6
+
+To get Perl 6 parsing rather than the default Perl 5 parsing,
+we said you could force Perl 6 mode in your main program with:
+
+    use Perl-6;
+
+Actually, you can just start your main program with any of:
+
+    use v6;
+    module;
+    class;
+    my;
+
+or even
+
+    #!/usr/bin/perl6
+
+Those all specify the latest Perl 6 semantics, and are equivalent to
+
+    use Perl-(v6.0.0...)-(Any);
+
+To lock the semantics to 6.0.0, say:
+
+    use v6.0.0;
+
+In any of those cases, strictures and warnings are the default
+in your main program.  But if you start your program with a bare
+version number or other literal:
+
+    v6.0.0;
+    v6;
+    6;
+    "Coolness, dude!";
+
+it runs Perl 6 in "lax" mode, without strictures or warnings, since obvously
+a bare literal in a void context I<ought> to have produced a warning.
+(Invoking perl with C<-e> has the same effect, as does a bare C<our;>.)
+
+In fact, since bare declarators are a syntax error in Perl 5,
+any bare declarator can be used to force Perl 6 parsing.  You can
+use the C<my;>/C<our;> distinction to force strict or non-strict.
+Or you can be non-commmital and say
+
+    use;
+
+which defaults to using the site's default Site::Policy.pm to set policies
+like strictness and warning levels, or even to defer to each individual
+user's Policy.pm file if the site policy allows it.  (If there is no
+Policy.pm, it still defaults to strictures and warnings.)
+
+(By the way, note that different site's policies can't be confused, since
+the "author" of any library module is part of the long name.)
