--- a/doc/trunk/design/syn/S13.pod
+++ b/doc/trunk/design/syn/S13.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 2 Nov 2004
-  Last Modified: 5 Nov 2004
+  Last Modified: 20 Nov 2004
   Number: 13
-  Version: 1
+  Version: 2
 
 =head1 Overview
 
@@ -59,9 +59,9 @@ sub or method.
 If you want to overload string concatenation for Arabic strings
 so you can handle various ligatures, you can say:
 
-    multi sub *infix:~(ArabicStr $s1, ArabicStr $s2) {...}
-    multi sub *infix:~(Str $s1, ArabicStr $s2) {...}
-    multi sub *infix:~(ArabicStr $s1, Str $s2) {...}
+    multi sub *infix:«~»(ArabicStr $s1, ArabicStr $s2) {...}
+    multi sub *infix:«~»(Str $s1, ArabicStr $s2) {...}
+    multi sub *infix:«~»(ArabicStr $s1, Str $s2) {...}
 
 Ordinary methods can be turned into multi methods within the class definition:
 
@@ -73,24 +73,24 @@ Ordinary methods can be turned into multi methods within the class definition:
 Likewise operators on your new type can appear in the class:
 
     class MyNum {
-	multi method prefix:+ (MyNum $x) {...} # what we do in numeric context
-	multi method prefix:~ (MyNum $x) {...} # what we do in string context
-	multi method prefix:? (MyNum $x) {...} # what we do in boolean context
+	multi method prefix:«+» (MyNum $x) {...} # what we do in numeric context
+	multi method prefix:«~» (MyNum $x) {...} # what we do in string context
+	multi method prefix:«?» (MyNum $x) {...} # what we do in boolean context
 	...
     }
 
 Binary operators may be declared as commutative:
 
-    multi sub infix:+ (Us $us, Them $them) is commutative { myadd($us,$them) }
+    multi sub infix:«+» (Us $us, Them $them) is commutative { myadd($us,$them) }
 
 That's equivalent to:
 
-    multi sub infix:+ (Us $us, Them $them) { myadd($us,$them) }
-    multi sub infix:+ (Them $them, Us $us) { myadd($us,$them) }
+    multi sub infix:«+» (Us $us, Them $them) { myadd($us,$them) }
+    multi sub infix:«+» (Them $them, Us $us) { myadd($us,$them) }
 
 Note the lack of C<*> on those definitions.  That means this definition
 of addition is only in effect within the scope of the package in which
-C<infix:+> is defined.  Similar constraints apply to lexically scoped
+C<infix:«+»> is defined.  Similar constraints apply to lexically scoped
 multi subs.  Generally you want to put your multi subs into the C<*>
 space, however, so that they work everywhere.
 
@@ -99,10 +99,10 @@ it was easy to alias several different operators to the same service
 routine.  This can easily be handled with Perl 6's aliasing:
 
     multi sub unimpl (MyFoo $x) { upchuck(); }
-    &infix:+ ::= &unimpl;
-    &infix:- ::= &unimpl;
-    &infix:* ::= &unimpl;
-    &infix:/ ::= &unimpl;
+    &infix:«+» ::= &unimpl;
+    &infix:«-» ::= &unimpl;
+    &infix:«*» ::= &unimpl;
+    &infix:«/» ::= &unimpl;
 
 =head1 Fallbacks
 
@@ -115,29 +115,21 @@ declarations are taken at face value and do not specify any underlying
 semantics.  As such, they're a "shallow" interpretation.
 
 However, sometimes you want to specify a "deep" interpretation of
-your operators.  That is, you're specify the abstract operation, which
-may be used by various shallow operators.  So Perl can autogenerate
-definitions for "missing" shallow routines.  If you say:
+your operators.  That is, you're specify the abstract operation,
+which may be used by various shallow operators.  Any deep multi
+declarations will be "amplified" into all the shallow operators that
+can be logically based on it.  If you say:
 
-    use multi :deep;
-
-then any subsequent multi declarations in the current scope will be
-"amplified" into all the shallow operators that can be logically based on them.
-Alternatively, individual declarations can be so marked.  If you say:
-
-    multi sub infix:% (Us $us, Them $them) is deep { mymod($us,$them) }
-
-XXX or possibly:
-
-    deep sub infix:% (Us $us, Them $them) { mymod($us,$them) }
+    multi sub deep:«%» (Us $us, Them $them) { mymod($us,$them) }
 
 then
 
-    multi sub infix:%= (Us $us, Them $them) { $us = $us % $them }
+    multi sub infix:«%» (Us $us, Them $them) { $us = $us % $them }
+    multi sub infix:«%=» (Us $us, Them $them) { $us = $us % $them }
 
-is generated for you (unless you define it yourself).  The mappings of
-magical names to sub definitions is controlled by the C<%?DEEPMAGIC>
-compiler hash.  Arguments to pragmas (such as C<multi> above) can influence
-the contents of this hash over a lexical scope, so you could have
-different policies on magical autogeneration.  The default mappings
-correspond to the standard fallback mappings of Perl 5 overloading.
+are both generated for you (unless you define them yourself).
+The mappings of magical names to sub definitions is controlled by the
+C<%?DEEPMAGIC> compiler hash.  Pragmas can influence the contents of
+this hash over a lexical scope, so you could have different policies
+on magical autogeneration.  The default mappings correspond to the
+standard fallback mappings of Perl 5 overloading.
