--- a/doc/trunk/design/syn/S10.pod
+++ b/doc/trunk/design/syn/S10.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 5 Nov 2004
+  Last Modified: 20 Nov 2004
   Number: 10
-  Version: 1
+  Version: 2
 
 =head1 Overview
 
@@ -53,7 +53,7 @@ does not imply globalness (unlike in Perl 5).
 The C<::*> namespace is not "main".  The default namespace for the main
 program is C<::*Main>.
 
-Package traits set using C<is>:
+Package traits are set using C<is>:
 
     package Foo is bar {...}
 
@@ -75,7 +75,9 @@ an C<AUTOLOAD> hook that behaves as in Perl 5.  However, that is being
 replaced by various autoload hooks that distinguish declaration from
 definition, and various types from one another.  In particular:
 
-    AUTOVAR
+    AUTOSCALAR
+    AUTOARRAY
+    AUTOHASH
     AUTOSUB
     AUTOMETH
 
@@ -83,18 +85,20 @@ stand in for the declaration of objects; they are called when anyone
 is searching for a name in the package (or module, or class), and the
 name doesn't already exist in the package.  (In particular, C<.can>
 calls C<AUTOMETH> when trying to determine if a class supports a
-particular method.)  The routines are expected to return a reference
-to an object of the proper sort, or undef if that name is not to be
-considered declared.  That object need not be defined yet, though the
-routine is allowed to define it, and even install it into the symbol
-table if it likes.
+particular method.)  The routines are expected to return a reference to
+an object of the proper sort (i.e. a variable, subroutine, or method
+reference), or undef if that name is not to be considered declared.
+That object need not be defined yet, though the routine is allowed
+to define it, and even install it into the symbol table if it likes.
 
 When someone tries to actually call or access an undefined object
 (which may have come from one of the routines above, or might have
 just been declared with a body of C<{...}>), a different set of hooks
 is used to define actual behavior at the last moment:
 
-    AUTOVARDEF
+    AUTOSCALARDEF
+    AUTOARRAYDEF
+    AUTOHASHDEF
     AUTOSUBDEF
     AUTOMETHDEF
 
@@ -105,7 +109,7 @@ hijack the call via the C<call> builtin, in which case the autoloader
 behaves just like a wrapper--see A6.)
 
 In any case, there is no longer any magical C<$AUTOLOAD> variable.
-The name being declared or defined can be found in C<$CALLER::_>
+The name being declared or defined can be found in C<$_>
 instead.  The name does not include the package name.  You can always
 get your own package name with C<$?PACKAGENAME>.
 
