Tweaks from Damian.
git-svn-id: http://svn.pugscode.org/pugs@23151 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S11.pod
+++ b/doc/trunk/design/syn/S11.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 27 Oct 2004
-  Last Modified: 6 Nov 2004
+  Last Modified: 20 Nov 2004
   Number: 11
-  Version: 2
+  Version: 3
 
 =head1 Overview
 
@@ -35,7 +35,7 @@ two basic declaration syntaxes:
 
     module Bar {...}	# block is in module Bar
 
-The first form is allowed only as the first declaration in the file.
+The first form is allowed only as the first statement in the file.
 
 Since there are no barewords in Perl 6, module names must be predeclared,
 or use the sigil-like C<::ModuleName> syntax.  The C<::> prefix does not
@@ -53,7 +53,7 @@ program is C<::*Main>.  (Putting C<module Main;> at the top of your program
 is redundant, except insofar as it tells Perl that the code is Perl 6 code
 and not Perl 5 code.)
 
-Module traits set using C<is>:
+Module traits are set using C<is>:
 
     module Foo is bar {...}
 
@@ -89,7 +89,9 @@ where to keep them, such that multiple versions by different authors
 can coexist, all of them available to any installed version of Perl.
 
 The syntax of a versioned module or class declaration has three parts
-separated by hyphens:
+separated by hyphens.  The three parts are the short name of the
+class/module, its version number, and a URI identifying the author
+(or authorizing authority). For example:
 
     class Dog-1.2.1-cpan:JRANDOM;
     class Dog-1.2.1-http://www.some.com/~jrandom;
@@ -178,11 +180,6 @@ Actually, you can just start your main program with any of:
     use v6;
     module;
     class;
-    my;
-
-or even
-
-    #!/usr/bin/perl6
 
 Those all specify the latest Perl 6 semantics, and are equivalent to
 
@@ -203,19 +200,5 @@ version number or other literal:
 
 it runs Perl 6 in "lax" mode, without strictures or warnings, since obvously
 a bare literal in a void context I<ought> to have produced a warning.
-(Invoking perl with C<-e> has the same effect, as does a bare C<our;>.)
+(Invoking perl with C<-e> has the same effect.)
 
-In fact, since bare declarators are a syntax error in Perl 5,
-any bare declarator can be used to force Perl 6 parsing.  You can
-use the C<my;>/C<our;> distinction to force strict or non-strict.
-Or you can be non-commmital and say
-
-    use;
-
-which defaults to using the site's default Site::Policy.pm to set policies
-like strictness and warning levels, or even to defer to each individual
-user's Policy.pm file if the site policy allows it.  (If there is no
-Policy.pm, it still defaults to strictures and warnings.)
-
-(By the way, note that different site's policies can't be confused, since
-the "author" of any library module is part of the long name.)
