--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -1500,17 +1500,17 @@ Hence:
 For writing your own backslash and assertion rules or macros, you may
 use the following syntactic categories:
 
-    rule rxbackslash:w { ... }    # define your own \w and \W
-    rule rxassertion:* { ... }    # define your own <*stuff> and «*stuff»
-    macro rxmetachar:, { ... }    # define a new metacharacter
-    macro rxmodinternal:x { ... } # define your own /:x() stuff/
-    macro rxmodexternal:x { ... } # define your own m:x()/stuff/
+    rule rxbackslash:«w» { ... }    # define your own \w and \W
+    rule rxassertion:«*» { ... }    # define your own <*stuff> and «*stuff»
+    macro rxmetachar:«,» { ... }    # define a new metacharacter
+    macro rxmodinternal:«x» { ... } # define your own /:x() stuff/
+    macro rxmodexternal:«x» { ... } # define your own m:x()/stuff/
 
 As with any such syntactic shenanigans, the declaration must be visible in
 the lexical scope to have any effect.  It's possible the internal/external
 distinction is just a trait, and that some of those things are subs
 or methods rather than rules or macros.  (The numeric rxmods are recognized
-by fallback macros that have nothing after the colon.)
+by fallback macros defined with an empty operator name.)
 
 =head1 Pragmas
 
