--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -13,9 +13,9 @@ Allison Randal <al@shadowed.net>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 21 Mar 2003
-  Last Modified: 5 Nov 2004
+  Last Modified: 21 Nov 2004
   Number: 6
-  Version: 4
+  Version: 5
 
 
 This document summarizes Apocalypse 6, which covers subroutines and the
@@ -58,7 +58,7 @@ The general syntax for anonymous subroutines is:
 
     sub ( PARAMS ) TRAITS {...}
 
-"Trait" is the new name for a compile-time (C<is>) property.
+"Trait" is the name for a compile-time (C<is>) property.
 See L<"Traits and Properties">
 
 
@@ -75,8 +75,8 @@ aliases to actual arguments:
 
     sub cap { $_ = uc $_ for @_ }   # Error: elements of @_ are constant
 
-If you need to modify the elements of C<@_>, declare it with the C<is rw>
-trait:
+If you need to modify the elements of C<@_>, declare it explicitly
+with the C<is rw> trait:
 
     sub swap (*@_ is rw) { @_[0,1] = @_[1,0] }
 
@@ -85,7 +85,7 @@ trait:
 
 Raw blocks are also executable code structures in Perl 6.
 
-Every block defines a subroutine, which may either be executed
+Every block defines an object of type C<Code>, which may either be executed
 immediately or passed in as a C<Code> reference argument to some other
 subroutine.
 
@@ -93,8 +93,9 @@ subroutine.
 =head2 "Pointy subs"
 
 The arrow operator C<< -> >> is almost a synonym for the anonymous
-C<sub> keyword. The parameter list of a pointy sub does not require
-parentheses and a pointy sub may not be given traits.
+C<sub> keyword, except that the parameter list of a pointy sub does
+not require parentheses, it does not require a preceding comma when
+included in a list, and a pointy sub may not be given traits.
 
     $sq = -> $val { $val**2 };  # Same as: $sq = sub ($val) { $val**2 };
 
@@ -204,7 +205,7 @@ the leading and trailing delimiters is the name of the operator.
 (There is no longer any rule about splitting an even number of characters.
 You must use a two element slice.)
 
-Operator names can be any sequence of Unicode characters. For example:
+Operator names can be any sequence of non-whitespace Unicode characters. For example:
 
     sub infix:«(c)» ($text, $owner) { return $text but Copyright($owner) }
     method prefix:«±» (Num $x) returns Num { return +$x | -$x }
@@ -217,9 +218,20 @@ Operator names can be any sequence of Unicode characters. For example:
 
     <!-- This is now a comment -->
 
-Whitespace may never be part of the name.  A null operator name does
-not define a null or whitespace operator, but a default matching rule
-for that syntactic category.
+Whitespace may never be part of the name (except as separator
+within a C<«...»> slice, as in the example above).
+
+A null operator name does not define a null or whitespace operator, but
+a default matching rule for that syntactic category, which is useful when
+there is no fixed string that can be recognized, such as tokens beginning
+with digits.  Such an operator I<must> supply an C<is parsed> trait.
+The Perl grammar uses a default rule for the C<:1st>, C<:2nd>, C<:3rd>,
+etc. rule modifiers, something like this:
+
+    sub rxmodexternal:«» ($x) is parsed(rx:p/\d+[st|nd|rd|th]/) {...}
+
+Such default rules are attempted in the order declared.  (They always follow
+any rules with a known prefix, by the longest-token-first rule.)
 
 =head1 Parameters and arguments
 
@@ -355,9 +367,11 @@ order you pass them in, so long as they follow any positional arguments:
     $formal = formalize($title, justify=>'left');
     $formal = formalize($title, :justify«right», :case«title»);
 
-Named parameters are always optional. Default values for named
-parameters are defined in the same way as for optional parameters. Named
-parameters default to C<undef> if they have no default.
+Named parameters are optional unless marked with the C<is required>
+trait.  (Alternately, we might allow a C<++> prefix for required
+name parameters.)  Default values for optional named parameters are
+defined in the same way as for positional parameters. Named parameters
+default to C<undef> if they have no default.
 
 Again, note the use of adverbial pairs in the argument list.  The following
 table shows the correspondence:
@@ -550,6 +564,22 @@ parameters:
 This subroutine still expects an array as its first argument, just like
 the first version.
 
+=head2 Unpacking hash parameters
+
+Likewise, a hash argument can be mapped to a hash of parameters, specified
+as named parameters within curlies.  Instead of saying:
+
+    sub register (%guest_data, $room_num) {
+        my $name := delete %guest_data«name»;
+        my $addr := delete %guest_data«addr»;
+        ...
+    }
+                                                                                
+you can get the same effect with:
+                                                                                
+    sub register ({+$name, +$addr, *%guest_data}, $room_num) {
+        ...
+    }
 
 =head2 Attributive parameters
 
@@ -626,7 +656,8 @@ These are the standard type names in Perl 6 (at least this week):
 =head2 Value types
 
 Explicit types are optional. Perl variables have two associated types:
-their "value type" and their "variable type".
+their "value type" and their "implementation type".  (More generally, any
+container has an implementation type, including subroutines and modules.)
 
 The value type specifies what kinds of values may be stored in the
 variable. A value type is given as a prefix or with the C<returns> or
@@ -647,18 +678,20 @@ A value type on an array or hash specifies the type stored by each element:
     my Rat %ship;   # the value of each entry stores a Rat
 
 
-=head2 Variable types
+=head2 Implementation types
 
-The variable type specifies how the variable itself is implemented. It is
+The implementation type specifies how the variable itself is implemented. It is
 given as a trait of the variable:
 
     my $spot is Scalar;             # this is the default
     my $spot is PersistentScalar;
     my $spot is DataBase;
 
-Defining a variable type is the Perl 6 equivalent to tying a variable in
-Perl 5.
-
+Defining an implementation type is the Perl 6 equivalent to tying
+a variable in Perl 5.  But Perl 6 variables are tied directly at
+declaration time, and for performance reasons may not be tied with a
+run-time C<tie> statement unless the variable is explicitly declared
+with an implementation type that does the C<Tieable> role.
 
 =head2 Hierarchical types
 
@@ -672,13 +705,13 @@ value each of its elements stores:
     my Hash of Array of Recipe %book;  # each value is a hash of arrays of Recipes
 
 Each successive C<of> makes the type on its right a parameter of the
-type on its left. So:
+type on its left. Parametric types are named using square brackets, so:
 
     my Hash of Array of Recipe %book;
 
-means:
+actually means:
 
-    my Hash(returns=>Array(returns=>Recipe)) %book; 
+    my Hash[returns=>Array[returns=>Recipe]] %book; 
 
 Because the actual variable can be hard to find when complex types are
 specified, there is a postfix form as well:
@@ -741,7 +774,7 @@ unless you use the "anonymous declarator" (C<a>/C<an>):
 
 =head1 Properties and traits
 
-Compile-time properties are now called "traits". The 
+Compile-time properties are called "traits". The 
 C<is I<NAME> (I<DATA>)> syntax defines traits on containers and
 subroutines, as part of their declaration:
 
@@ -918,9 +951,8 @@ look for, and how many such scopes to skip over when looking:
     $caller = caller;                      # immediate caller
     $caller = caller Method;               # nearest caller that is method
     $caller = caller Bare;                 # nearest caller that is bare block
-    $caller = caller Sub, skip=>2;         # caller three levels up
-    $caller = caller Block, label=>'Foo';  # caller whose label is 'Foo'
-
+    $caller = caller Sub, :skip(2);        # caller three levels up
+    $caller = caller Block, :label«Foo»;   # caller whose label is 'Foo'
 
 =head2 The C<want> function
 
@@ -953,13 +985,13 @@ A C<return> statement causes the innermost surrounding subroutine, method,
 rule, macro, or multimethod to return.  Only declarations with an explicit
 keyword such as "sub" may be returned from.
 
-To return from other types of code structures, the C<leave> funtion is used:
+To return from other types of code structures, the C<leave> function is used:
 
     leave;                      # return from innermost block of any kind
     leave Method;               # return from innermost calling method
     leave &?SUB <== 1,2,3;      # Return from current sub. Same as: return 1,2,3
     leave &foo <== 1,2,3;       # Return from innermost surrounding call to &foo
-    leave Loop, label=>'COUNT'; # Same as: last COUNT;
+    leave Loop, :label«COUNT»;  # Same as: last COUNT;
 
 
 =head2 Temporization
@@ -1008,6 +1040,19 @@ the temporizing scope to restore the subroutine to its pre-C<temp> state:
         TEMP {{ $next = $curr }}  # TEMP block returns the closure { $next = $curr }
         return $curr;
     }
+
+    # and later...
+									    
+    say next();     # prints 0; $next == 1
+    say next();     # prints 1; $next == 2
+    say next();     # prints 2; $next == 3
+    if ($hiccough) {
+	say temp next();  # prints 3; closes $curr at 3; $next == 4
+	say next();    	  # prints 4; $next == 5
+	say next();       # prints 5; $next == 6
+    }                     # $next = 3
+    say next();     # prints 3; $next == 4
+    say next();     # prints 4; $next == 5
 
 Hypothetical variables use the same mechanism, except that the restoring
 closure is called only on failure.
@@ -1076,7 +1121,7 @@ specify tail-recursion on an anonymous block:
 					:: $n * &?BLOCK($n-1)
 				  };
 
-C<$?BLOCKLABEL> contains the block of the current block, if any.
+C<$?BLOCKLABEL> contains the label of the current block, if any.
 
 =head2 Currying
 
