Pod format tweak.
git-svn-id: http://svn.pugscode.org/pugs@23153 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -435,7 +435,7 @@ into an array when individual elements are actually accessed:
 
         @fromtwo = tail(1..Inf);        # @fromtwo contains a lazy [2..Inf]
 
-=head2
+=head2 Slurpy block
 
 It's also possible to declare a slurpy block: C<*&block>.  It slurps
 up any nameless block, specified by C<:{...}>.  This will turn out
